Bug 26160 - [2.35 Regression] Warning: index table size is too small 0 vs 70
Summary: [2.35 Regression] Warning: index table size is too small 0 vs 70
Status: RESOLVED FIXED
Alias: None
Product: binutils
Classification: Unclassified
Component: binutils (show other bugs)
Version: 2.35
: P2 normal
Target Milestone: ---
Assignee: Nick Clifton
URL:
Keywords:
Depends on:
Blocks: 26112
  Show dependency treegraph
 
Reported: 2020-06-23 13:12 UTC by H.J. Lu
Modified: 2022-11-04 23:56 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2020-06-23 13:12:59 UTC
commit e4b7104b1e0c70613d0f553cb18d25c7343647d3
Author: Nick Clifton <nickc@redhat.com>
Date:   Mon Jun 22 17:44:56 2020 +0100

    Add support for decoding the DW_MACRO_define_strx and DW_MACRO_undef_strx operands found in DWARF-5 .debug_macro sections.

caused:

FAIL: dwp_test_2.sh
FAIL: dwp_test_1.sh

in gold test:

$ ../../binutils/readelf -wi dwp_test_1.dwp > dwp_test_1.stdout
readelf: Warning: index table size is too small 0 vs 70
...
Comment 1 Nick Clifton 2020-06-23 13:47:41 UTC
Hi H.J.

  Sorry about that - this is due to my patch to add support for the
  DW_MACRO_define_strx operand, which is not handling .debug_str_offsets.dwo
  sections correctly.  I have a local patch which I am testing at
  this moment.

Cheers
  Nick
Comment 2 Sourceware Commits 2020-06-23 15:07:34 UTC
The master branch has been updated by Nick Clifton <nickc@sourceware.org>:

https://sourceware.org/git/gitweb.cgi?p=binutils-gdb.git;h=39f381cb80463bd814da549a927bee4643d4ceac

commit 39f381cb80463bd814da549a927bee4643d4ceac
Author: Nick Clifton <nickc@redhat.com>
Date:   Tue Jun 23 16:06:38 2020 +0100

    Fix decoding of indexed DWARF strings using pre-DWARF-5 string offset sections.  Fix display of .debug_str_offsets.dwo sections.
    
            PR 26160
            * dwarf.c (fetch_indexed_string): Detect and handle old style
            .debug_str_offset tables.
            (display_debug_str_offsets): Likewise.  Also add support for
            .debug_str_offsets.dwo sections.
Comment 3 Nick Clifton 2020-06-23 15:08:58 UTC
Right - this should now be fixed.
Comment 4 Sourceware Commits 2020-06-23 16:23:32 UTC
The master branch has been updated by H.J. Lu <hjl@sourceware.org>:

https://sourceware.org/git/gitweb.cgi?p=binutils-gdb.git;h=d0dded5bc251e506ef65b13696c624ea8669ed6e

commit d0dded5bc251e506ef65b13696c624ea8669ed6e
Author: H.J. Lu <hjl.tools@gmail.com>
Date:   Tue Jun 23 09:19:05 2020 -0700

    Add a testcase for PR binutils/26160
    
            PR binutils/26160
            * testsuite/binutils-all/pr26160.dwp.bz2: New file.
            * testsuite/binutils-all/pr26160.r: Likewise.
            * testsuite/binutils-all/readelf.exp: Run PR binutils/26160 test.
Comment 5 Sourceware Commits 2022-11-04 23:56:30 UTC
The master branch has been updated by H.J. Lu <hjl@sourceware.org>:

https://sourceware.org/git/gitweb.cgi?p=binutils-gdb.git;h=d195b95c91febcdad3ec002d415586cee7f6cb16

commit d195b95c91febcdad3ec002d415586cee7f6cb16
Author: H.J. Lu <hjl.tools@gmail.com>
Date:   Mon Oct 31 17:02:17 2022 -0700

    binutils: Run PR binutils/26160 test
    
    Update expected PR binutils/26160 test output for readelf out change
    and run PR binutils/26160 test.
    
            PR binutils/26160
            * testsuite/binutils-all/pr26160.r: Updated.
            * testsuite/binutils-all/readelf.exp: Run PR binutils/26160 test.