Fix decoding of indexed DWARF strings using pre-DWARF-5 string offset sections.  Fix display of .debug_str_offsets.dwo sections.

PR 26160
	* dwarf.c (fetch_indexed_string): Detect and handle old style
	.debug_str_offset tables.
	(display_debug_str_offsets): Likewise.  Also add support for
	.debug_str_offsets.dwo sections.